header fix for Mi browser and chrome on mobile

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -157,6 +157,10 @@ body {
               opacity: 1;
               padding-top: 2rem;
             }
+
+            &.opened {
+              min-height: 100%;
+            }
           }
         }
       }
